// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Openapi > Optional 1`] = `
{
  "required": false,
  "schema": {
    "format": "md5",
    "maxLength": 4294967295,
    "minLength": 0,
    "pattern": "",
    "type": "string",
  },
}
`;

exports[`Openapi > Required 1`] = `
{
  "required": true,
  "schema": {
    "format": "md5",
    "maxLength": 4294967295,
    "minLength": 0,
    "pattern": "",
    "type": "string",
  },
}
`;

exports[`Openapi > With default value 1`] = `
{
  "required": false,
  "schema": {
    "default": "some-hash",
    "format": "md5",
    "maxLength": 4294967295,
    "minLength": 0,
    "pattern": "",
    "type": "string",
  },
}
`;

exports[`Openapi > With extra infos 1`] = `
{
  "deprecated": true,
  "description": "Hello Test",
  "required": true,
  "schema": {
    "format": "sha1",
    "maxLength": 4294967295,
    "minLength": 0,
    "pattern": "",
    "type": "string",
  },
}
`;
